<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paranaenbondi.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/btnHorariosPorLinea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnHorariosPorLinea" />

    <Button
        android:id="@+id/btnQueMeTomo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHorariosPorLinea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnQueMeTomo" />

    <Button
        android:id="@+id/btnDondeLoTomo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnQueMeTomo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnDondeLoTomo" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDondeLoTomo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnActualizar" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnActualizar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btnAcercaDe" />

</RelativeLayout>